--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -251,20 +251,17 @@
 }
 
 @article{hauber2010,
- pages={1--23, 2010},
   author={Hauber, R. and Muth, B.},
   title={Architekturprozesse--Systeme systematisch entwickeln},
-  journal={URL: www. sigs-datacom. de},
+  journal={URL: www. sigs-datacom. de, S.1--23, 2010},
    tags= {Pattern; Software Engineering}
 }
 
 @article{gau2006,
  	 title={UMA und EPF: Einf{\"u}hrung und Anwendung in der Praxis},
   	author={Gau, T.},
- 	 journal={Objekt Spektrum,(November/Dezember 2006-6)},
+ 	 journal={Objekt Spektrum,(November/Dezember 2006-6), 2006, S. 42-47},
 	 tags= {Pattern; Software Engineering},
-	   year={2006},
-  	pages={42--47},
 	
 }
 
@@ -526,8 +523,8 @@ address = {Ulm}
 author={Aalst, W.M.P. and Pesic, M.},
 booktitle={Web Services and Formal Methods},
 title={DecSerFlow: Towards a Truly Declarative Service Flow Language},
-year={Lecture Notes in Computer Science, Vol. 6291, S. 1-26,  2006},
-publisher={Springer Berlin Heidelberg}
+year={Lecture Notes in Computer Science, Vol. 6291, S. 1-26},
+publisher={Springer, 2006}
 }
 
 @article{quteprints,
@@ -544,7 +541,7 @@ publisher={Springer Berlin Heidelberg}
  author={Becker, J.},
   title={Prozessmanagement: Ein Leitfaden Zur Prozessorientierten Organisationsgestaltung},
   year={2012},
-  publisher={Springer Berlin Heidelberg}
+  publisher={Springer}
 }
 
 @book{gadatsch2012,
@@ -632,8 +629,8 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie\ -als-stra
 @inproceedings{gruhn2006complexity,
   author={Gruhn, V. and Laue, R.},
   title={Complexity metrics for business process models},
-  booktitle={9th International Conference on Business Information Systems},
-  pages={1--12, 2006}
+  booktitle={9th International Conference on Business Information Systems, 2006},
+  pages={1--12}
   }
 
 @article{haisjackl2014understanding,
@@ -654,16 +651,15 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie\ -als-stra
 @article{recker2007does,
   author={Recker, J. C. and Dreiling, A.},
   title={Does it matter which process modelling language we teach or use? an experimental study on understanding process modelling languages without formal education},
-    journal={18th Australasian Conference on Information Systems},
-  pages={356--366, 2007},
+    journal={18th Australasian Conference on Information Systems, S. 356--366, 2007},
   publisher={University of Southern Queensland}
 }
 
 @inproceedings{gruhn2006adopting,
   author={Gruhn, V. and Laue, R.},
   title={Adopting the cognitive complexity measure for business process models},
-  booktitle={5th IEEE International Conference on Cognitive Informatics},
-  pages={236--241, 2006}
+  booktitle={5th IEEE International Conference on Cognitive Informatics, 2006},
+  pages={236--241}
 }
 
 
@@ -719,7 +715,7 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie\ -als-stra
          
  @article{pinggera2010investigating,
   title={Investigating the Process of Process Modeling with Cheetah Experimental Platform--Tool Paper--},
-  author={Pinggera, Jakob and Zugal, Stefan and Weber, Barbara},
+  author={Pinggera, J. and Zugal, S. and Weber, B.},
   journal={ER-POIS 2010},
   pages={13},
   year={2010}
@@ -727,7 +723,7 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie\ -als-stra
 
 @inproceedings{sabrina933,
            month = {June},
-          author = {Cornelia Haisjackl and Stefan Zugal and Pnina Soffer and Irit Hadar and Barbara Weber and Jakob Pinggera and Manfred Reichert},
+          author = {Haisjackl, C. and Zugal, S. and Soffer, P. and Hadar , I. and Weber, B. and Pinggera, J. and Reichert, M},
        booktitle = {Proc. BPMDS'13},
            title = {Making Sense of Declarative Process Models: Common Strategies and Typical Pitfalls},
        publisher = {Springer, LNBIP, vol. 147},
