--- a/Masterarbeit 4/Tex/abstract.tex
+++ b/Masterarbeit 4/Tex/abstract.tex
@@ -1,13 +1,13 @@
 \section*{Kurzfassung}
 
-Softwaresysteme sind heutzutage aus dem täglichen Leben nicht mehr weg zu denken. Sie finden sich in jedem elektronischen Gerät und kaum jemand kann in der heutigen Zeit auf Softwaresysteme verzichten. Da die Herstellung von Softwaresystemen mit einer sehr hohen Komplexität einhergeht, ist es wichtig, 
-bei deren Erstellung einem Softwareentwicklungsprozess zu folgen. Denn Softwareentwicklungsprozesse geben Aktivitäten vor, welche zur Herstellung von Software notwendig. Dadurch helfen sie, die Entwicklung von Software zu strukturieren. Drei sehr bekannte Vertreter von Softwareentwicklungsprozessen sind Scrum, Open UP und das V-Modell XT.\newline
+Softwaresysteme sind heutzutage aus dem täglichen Leben nicht mehr weg zu denken. Sie finden sich in jedem elektronischen Gerät und kaum jemand kann in der jetzigen Zeit auf Softwaresysteme verzichten. Da die Herstellung von Softwaresystemen mit einer sehr hohen Komplexität einhergeht, ist es wichtig, 
+bei deren Erstellung einem Softwareentwicklungsprozess zu folgen. Softwareentwicklungsprozesse geben Aktivitäten vor, welche zur Herstellung von Software notwendig sind. Dadurch helfen sie, die Entwicklung von Software zu strukturieren. Drei sehr bekannte Vertreter von Softwareentwicklungsprozessen sind Scrum, Open UP und das V-Modell XT.\newline
 
-An der Entwicklung von Software sind oftmals eine Reihe verschiedener Personen mit unterschiedlichen fachlichen Hintergründen beteiligt. Diese müssen den vorgegeben Softwareentwicklungsprozess alle verstehen. Da eine rein textuelle Beschreibung der selbigen oftmals sehr umfangreich ist, bieten sich Prozessmodellierungssprachen zur Beschreibung von Softwareentwicklungsprozessen an da diese sowohl eine formale Korrektheit aufweisen aber auch intuitiv verständlich sind.\newline
+An der Entwicklung von Software sind oftmals eine Reihe verschiedener Personen mit unterschiedlichen fachlichen Hintergründen beteiligt. Diese müssen alle den vorgegeben Softwareentwicklungsprozess verstehen. Da eine rein textuelle Beschreibung der selbigen oftmals sehr umfangreich ist, bieten sich Prozessmodellierungssprachen zur Beschreibung von Softwareentwicklungsprozessen an da diese sowohl eine formale Korrektheit aufweisen aber auch intuitiv verständlich sind.\newline
 
-Es existieren inzwischen eine ganze Reihe verschiedener Prozessmodellierungssprachen. Deren Vor- und Nachteile werden intensiv diskutiert. Hierbei wird auch der Unterschied zwischen deklarativen und imperativen Prozessmodellierungssprachen diskutiert.\newline
+Es existieren inzwischen eine ganze Reihe verschiedener Prozessmodellierungssprachen. Deren Vor- und Nachteile werden intensiv diskutiert. Hierbei wird auch der Unterschied zwischen deklarativen und imperativen Prozessmodellierungssprachen erörtert.\newline
 
-Aus diesem Grund werden in dieser Arbeit Teile der drei Softwareentwicklungsprozesse Scrum, Open UP und V-Modell XT sowohl in imperativer als auch in deklarativer Prozessmodellierungssprache modelliert und anhand der daraus entstehenden Modelle wird die Anwendbarkeit der imperativen und deklarativen Prozessmodellierungsansätzen verglichen.
+Aus diesem Grund werden in dieser Arbeit Teile der drei Softwareentwicklungsprozesse Scrum, Open UP und V-Modell XT sowohl in imperativer als auch in deklarativer Prozessmodellierungssprache modelliert und anhand der daraus entstehenden Modelle wird die Anwendbarkeit der imperativen und deklarativen Prozessmodellierungsansätze verglichen.
 
 
 
