--- a/Masterarbeit 4/Tex/chapter6.tex
+++ b/Masterarbeit 4/Tex/chapter6.tex
@@ -1,8 +1,8 @@
 \chapter{Modellierung für Softwareentwicklungsprozesse}\label{sec:chapter6}
-In diesem Kapitel wird ein Vergleich der Anwendbarkeit zwischen imperativer und deklarativer Modellierung für Softwareentwicklungsprozesse gezogen. Als Erstes wird dieser Vergleich in Kapitel 5.1 für das Softwareentwicklungsprozess Scrum durchgeführt. Hierfür wird zunächst in Kapitel 5.1 das der Modellierung zugrunde liegende Modell, das Softwareentwicklungsprozess Scrum, vorgestellt und für die Modellierung analysiert. Danach erfolgen die imperative Modellierung in der imperativen Prozessmodellierungssprache BPMN und anschließend die deklarative Modellierung in der deklarativen Prozessmodellierungssprache ConDec. Danach erfolgt der Vergleich zwischen den beiden Modellen.\newline
-Der zweite Softwareentwicklungsprozess, welcher in diesem Kapitel in imperativer und deklarativer Prozessmodellierungssprache verglichen werden soll, ist der Open Unified Process (Open UP). Auch hier erfolgt zunächst eine kurze Einführung in den Open UP in Kapitel 5.2, bevor dieser analysiert wird, damit er in imperativer, bzw. deklarativer Prozessmodellierungssprache modelliert werden kann. Hiernach erfolgt der Vergleich zwischen den imperativen und deklarativen Prozessmodellen.\newline
+In diesem Kapitel wird ein Vergleich der Anwendbarkeit zwischen imperativer und deklarativer Modellierung für Softwareentwicklungsprozesse gezogen. Zunächst  wird dieser Vergleich in Kapitel 5.1 für das Softwareentwicklungsprozess Scrum durchgeführt. Hierfür wird in Kapitel 5.1 das der Modellierung zugrunde liegende Modell, das Softwareentwicklungsprozess Scrum, vorgestellt und für die Modellierung analysiert. Danach folgen die imperative Modellierung in der imperativen Prozessmodellierungssprache BPMN und anschließend die deklarative Modellierung in der deklarativen Prozessmodellierungssprache ConDec. Danach erfolgt der Vergleich zwischen den beiden Modellen.\newline
+Der zweite Softwareentwicklungsprozess, welcher in diesem Kapitel in imperativer und deklarativer Prozessmodellierungssprache verglichen werden soll, ist der Open Unified Process (Open UP). Auch hier erfolgt zunächst eine kurze Einführung in den Open UP in Kapitel 5.2, bevor dieser analysiert wird, damit er in imperativer, bzw. deklarativer Prozessmodellierungssprache modelliert werden kann. Im Anschluss erfolgt der Vergleich zwischen den imperativen und deklarativen Prozessmodellen.\newline
 Zuletzt werden noch für das V-Modell XT die Prozessmodelle erstellt und verglichen. Eine Einführung in das V-Modell XT erfolgt in Kapitel 5.3. Für dieses wird als Vorbereitung für die Modellierung eine Analyse durchgeführt und es erfolgt die Modellierung in imperativer und deklarativer Prozessmodellierungssprache. Anschließend wird der Vergleich hierzu durchgeführt.\newline
-Kapitel 5.4 widmet sich dem Vergleich zwischen allen Modellen insgesamt. Hier werden die Ergebnisse der Vergleiche aus den vorigen drei Kapiteln zusammengefasst und es werden allgemeine Schlüsse gezogen.\newline
+Kapitel 5.4 widmet sich dem Vergleich zwischen allen Modellen insgesamt. Hier werden die Ergebnisse der Vergleiche aus den vorherigen drei Kapiteln zusammengefasst und es werden allgemeine Schlüsse gezogen.\newline
 
 
 \section{Scrum}\label{sec:chapter6:Imperative Modellierung}
@@ -23,11 +23,11 @@ Der genaue Ablauf im Scrum-Prozessmodell wird nachfolgend analysiert.
 
 Im Scrum-Prozessmodell gibt es nur drei verschiedene Rollen: Den \textit{Product Owner}, das \textit{Team} und den \textit{Scrum Master}. Sämtliche Verantwortlichkeiten innerhalb eines Projektes werden hierbei auf diese drei Rollen aufgeteilt \cite{Schwaber2004}. \newline
 
-Der Procuct Owner ist verantwortlich, die Interessen aller am Projekt beteiligten Personen zu vertreten. Neben der Budgetierung des Projektes erstellt er  Releasepläne und fertigt den \textit{Produkt Backlog} an, welcher eine Liste mit funktionalen und nicht-funktionalen Anforderungen darstellt \cite{Schwaber2004, Pichler2010,Schwaber2007}. Weiterhin priorisiert er die Aufgaben, welche von den Entwicklern im \textit{Sprint} erledigt werden sollen, so dass die aktuell nützlichsten Elemente die höchste Priorität haben. Er erstellt eine Liste dieser Elemente, welche \textit{Sprint Backlog} genannt wird \cite{Henning2011, Schwaber2007,Pichler2010}. Der Procuct Owner ist ebenfalls zuständig für das Annehmen, bzw. Ablehnen der Arbeitsergebnisse \cite{eclipseScrum}. \newline
+Der Procuct Owner ist verantwortlich, die Interessen aller am Projekt beteiligten Personen zu vertreten. Neben der Budgetierung des Projektes erstellt er  Releasepläne und fertigt den \textit{Produkt Backlog} an, welcher eine Liste mit funktionalen und nicht-funktionalen Anforderungen darstellt \cite{Schwaber2004, Pichler2010,Schwaber2007}. Weiterhin priorisiert er die Aufgaben, welche von den Entwicklern im \textit{Sprint} erledigt werden sollen, so dass die aktuell nützlichsten Elemente die höchste Priorität haben. Er erstellt eine Liste dieser Elemente, welche \textit{Sprint Backlog} genannt wird \cite{Henning2011, Schwaber2007,Pichler2010}. Der Procuct Owner ist ebenfalls zuständig für das Annehmen bzw. Ablehnen der Arbeitsergebnisse \cite{eclipseScrum}. \newline
 
 Die Teams bestehen bei Scrum für gewöhnlich aus fünf bis neun Mitgliedern und verwalten sich selbst. Ihre Tätigkeiten müssen erfolgreich sein, liegen aber in ihrer eigenen Verantwortung \cite{Pries2011, Wolf2011}. Alle Teammitglieder sind gemeinsam für den Erfolg eines jeden \textit{Sprints} und des gesamten Projektes zuständig \cite{Pichler2010}. \newline
 
-Der Scrum Master ist für den gesamten Scrum-Prozess verantwortlich. Dies schließt die Vermittlung von Scrum-Inhalten (z.B. Schulungen) und die Implementation von Scrum in die Unternehmenskultur ein \cite{Pichler2010}. Er überwacht die Sprint- Tasks, um sicher zu gehen, dass der Sprint erfolgreich verläuft.\newline
+Der Scrum Master ist für den gesamten Scrum-Prozess verantwortlich. Dies schließt die Vermittlung von Scrum-Inhalten, wie beispielsweise Schulungen, und die Implementation von Scrum in die Unternehmenskultur ein \cite{Pichler2010}. Er überwacht die Sprint-Tasks, um sicher zu gehen, dass der Sprint erfolgreich verläuft.\newline
 
 Bei Scrum wird die Entwicklung in mehrere kurze Zyklen, also Iterationen eingeteilt. Eine einzelne Iteration wird bei Scrum \textit{Sprint} genannt \cite{Henning2011}. Die Dauer eines Sprints beträgt zwei bis vier Wochen. Am Ende eines jeden Sprints muss das Team ein lauffähiges Produkt abliefern \cite{Wolf2011}. Vor jedem Sprint findet ein \textit{Sprint Planning Meeting} statt, welches sich aus zwei Teilen zusammensetzt \cite{Pichler2010}. Im ersten Teil findet eine Planung des nächsten Sprints statt \cite{Lacey2012}. Hierfür präsentiert der Product Owner dem Team eine Liste der Product Backlog-Elemente mit der aktuell höchsten Priorität \cite{Schwaber2004, Schwaber2007,Pichler2010}. Diese Liste wird \textit{Sprint Backlog} genannt \cite{Wolf2011}. Das Team hat die Möglichkeit, Fragen bezüglich Inhalt, Zweck, Bedeutung und Absichten der Sprint Backlog-Elemente zu stellen. Anschließend werden die einzelnen Elemente aus dem Sprint-Backlog in sogenannte \textit{Tasks} aufgeteilt, welche jeweils eine ideale Bearbeitungszeit von zwei bis vier Stunden haben, aber niemals länger als zwei Tage dauern sollten \cite{Wolf2011}. Das Team kann sich die Aufgaben eigenverantwortlich aufteilen und muss sich anschließend dem Product  Owner verpflichten, die Tasks bis zum Abschluss des Sprints zu erledigen \cite{Wolf2011, Keith2010,Pichler2010}.
 Das Team trifft sich während des Sprints täglich in einem 15-minütigen Meeting, dem \textit{täglichem Scrum Meeting}. Dabei redet das Team über seinen Fortschritt und eventuelle Probleme bei seiner Arbeit \cite{Keith2010}. Hier muss jedes Teammitglied die nachfolgenden drei Fragen beantworten \cite{Wolf2011}:
@@ -42,7 +42,7 @@ Das Team trifft sich während des Sprints täglich in einem 15-minütigen Meetin
 Abbildung \ref{fig:ScrumImperativ} zeigt die imperative Modellierung von Scrum. Im Prozess gibt es die drei verschiedenen Rollen Product Owner, Team und Scrum Master, was im Prozessmodell durch drei verschiedene Swimlanes dargestellt ist. Manche Aktivitäten werden auch von mehreren Rollen ausgeführt. Da dies jedoch in BPMN nicht darstellbar ist, werden die entsprechenden Aktivitäten nachfolgend immer dem Hauptakteur zugeteilt.\newline
 Parallel zu allen anderen Aktivitäten des Teams und des Product Owners muss der Scrum Master stets den Scrum-Prozess managen. Dies wird im Prozessmodell durch das Parallele Gateway angezeigt. \newline
 Der Product Owner schätzt als erste Aktivität den Product Backlog ab. Anschließend priorisiert er den Product Backlog und erstellt parallel dazu die Releasepläne. \newline
-Wenn alle zwei bis vier Wochen ein neuer Sprint beginnt, was hier durch ein Zeitereignis dargestellt ist, so wird zuerst das Sprint Planning Meeting durchgeführt. Dies ist hier als Unterprozess in Abbildung \ref{fig:ScrumImperativUnter} dargestellt. Zunächst priorisiert der Product Owner die Anforderungen, welche während des Sprints erledigt werden müssen, und erstellt danach den Sprint Backlog. Anschließend teilt sich das Team selbstständig die Sprint Backlog-Elemente in Tasks ein.\newline
+Wenn alle zwei bis vier Wochen ein neuer Sprint beginnt, was hier durch ein Zeitereignis dargestellt ist, wird zuerst das Sprint Planning Meeting durchgeführt. Dieses ist als Unterprozess in Abbildung \ref{fig:ScrumImperativUnter} dargestellt. Zunächst priorisiert der Product Owner die Anforderungen, welche während des Sprints erledigt werden müssen und erstellt danach den Sprint Backlog. Anschließend teilt sich das Team selbstständig die Sprint Backlog-Elemente in Tasks ein.\newline
 Im Anschluss findet ein Sprint-Rückblick statt (Abbildung \ref{fig:ScrumImperativ}) und der Product Owner veranstaltet ein Sprint Review Meeting.\newline
 Das Team führt während des Sprints täglich ein 15-minütiges Scrum Meeting durch und jedes Teammitglied arbeitet eine Task nach der anderen ab. Dies wird hier als Schleife dargestellt: Solange noch weitere Tasks vorhanden sind, führt das Exklusive Gateway immer wieder zurück zur Aktivität \textit{Tasks abarbeiten}. Erst wenn keine weiteren Tasks mehr vorhanden sind, führt der Prozess weiter zum nächsten Entscheidungspunkt.\newline
 Sind noch weitere Aufgaben im Product Backlog vorhanden, die noch erledigt werden müssen, so beginnt ein weiterer Sprint, was hier durch eine Rückschleife sichtbar ist. Ist jedoch schon der komplette Product Backlog abgearbeitet, so endet der Prozess hier.
@@ -95,7 +95,7 @@ Die Aktivitäten \grqq alle 24 Stunden 15-minütiges Scrum-Meeting durchführen\
 
 \subsection{Vergleich}
 
-Der Vergleich zwischen den in der deklarativen Prozessmodellierungssprache ConDec und in der imperativen Prozessmodellierungssprache BPMN erstellten Scrum Prozessmodell wird im Folgenden anhand der in Kapitel 4 definierten Anforderungen durchgeführt. Auf Grund der dort definierten Vergleichskriterien wurden nachfolgend die Aktivitäten, die Anzahl der Constraints/Gateways, Anzahl der Sequenzflusselemente/Existenz, Anzahl unterschiedlicher Gateways/Constraints sowie die Summe der Elemente insgesamt in beiden Modellen gezählt. Weiterhin wurden die Aktivitäten gezählt, um später zwischen großen und kleinen Prozessmodellen vergleichen zu können. Hierdurch können im Folgenden die Modelle anhand der Vergleichskriterien miteinander verglichen werden. \newline
+Der Vergleich zwischen den in der deklarativen Prozessmodellierungssprache ConDec und in der imperativen Prozessmodellierungssprache BPMN erstellten Scrum Prozessmodelle wird im Folgenden anhand der in Kapitel 4 definierten Anforderungen durchgeführt. Auf Grund der dort definierten Vergleichskriterien wurden nachfolgend die Aktivitäten, die Anzahl der Constraints/Gateways, Anzahl der Sequenzflusselemente/Existenz, Anzahl unterschiedlicher Gateways/Constraints sowie die Summe der Elemente insgesamt in beiden Modellen gezählt. Weiterhin wurden die Aktivitäten gezählt, um später zwischen großen und kleinen Prozessmodellen vergleichen zu können. Hierdurch können im Folgenden die Modelle anhand der Vergleichskriterien miteinander verglichen werden. \newline
 Wie Abbildung \ref{fig:ScrumExcel} entnommen werden kann, unterscheidet sich die Anzahl der Aktivitäten zwischen den in BPMN und ConDec modellierten Prozessmodellen nicht voneinander. In jedem Prozessmodell gibt es 12 Aktivitäten.\newline
 
 \begin{figure}[htp]
@@ -110,7 +110,7 @@ Wie Abbildung \ref{fig:ScrumExcel} entnommen werden kann, unterscheidet sich die
 Zudem braucht es in BPMN sechs Gateways und 26 Sequenzflusselemente, um den Ablauf des Metamodells darzustellen. Bei Verwendung von ConDec werden 13 Constraints (vier unterschiedliche) und sieben Existenz Constraints zur Darstellung der Abfolge der Aktivitäten benötigt. In BPMN werden sechs Gateways (zwei unterschiedliche) verwendet.\newline
 
 
-Die syntaktische \textit{Richtigkeit} [A 1.1] kann bei beiden Modellierungssprachen eingehalten werden, da bei beiden Prozessmodellierungssprachen die Notationsregeln zur korrekten Darstellung des Prozessablaufes eingehalten werden können. Dies hat das Testen der beiden Modelle in Signavio, bzw. Declare bestätigt.\newline
+Die syntaktische \textit{Richtigkeit} [A 1.1] kann bei beiden Modellierungssprachen eingehalten werden, da bei beiden Prozessmodellierungssprachen die Notationsregeln zur korrekten Darstellung des Prozessablaufes eingehalten werden können. Dies hat das Testen der beiden Modelle in Signavio bzw. Declare bestätigt.\newline
 Die semantische \textit{Richtigkeit} [A 1.2] lässt sich mit BPMN in Bezug auf Rollen und Artefakte besser einhalten als mit ConDec. Da es bei ConDec keine Möglichkeit gibt, Rollen und Artefakte im Prozessmodell zu visualisieren, fehlen diese Informationen. Die Rollen und Artefakte können zwar in Declare abgebildet werden, jedoch gibt es in ConDec hierfür keine Notationselemente, um Rollen und Artefakte im Prozessmodell selbst sichtbar zu machen. Aus diesem Grund müssen diese Informationen beim Modellieren weggelassen werden, was zur Folge hat, dass das im Metamodell beschriebene Verhalten nicht vollständig abgebildet werden kann und somit leidet auch der Nutzen des Modells.\newline
 In Anbetracht der syntaktischen Richtigkeit [A 1.1] sind BPMN und ConDec gleich gut zur Modellierung geeignet. Bei Betrachtung der semantischen Richtigkeit ist  BPMN die geeignetere Modellierungssprache [A 1.2]. Somit erfüllt BPMN die \textit{Richtigkeit} besser, da es beiden Unterkriterien gerecht wird.\newline
 
@@ -119,7 +119,7 @@ Nur BPMN bietet die Möglichkeit, Artefakte im Prozessmodell zu visualisieren un
 
 Lediglich die mit BPMN erstellten Prozessmodelle können mit minimal relevanten Informationen erstellt werden. Der Grund dafür ist wiederum die fehlende Visualisierungsmöglichkeit von Rollen und Artefakten. Somit kann die \textit{Relevanz} [A 3.1] nur von BPMN eingehalten werden.\newline
 
-Bei Untersuchung der \textit{Klarheit} lässt sich feststellen, dass sich die Anzahl der Sequenzflusselemente/Existenz Constraints zwischen BPMN (26) und ConDec (7) unterscheidet. Ebenfalls gibt es eine Differenz bei der Anzahl der Gateways (6)/Constraints (13) und der Anzahl der unterschiedlichen Gateways (2)/Constraints (4) zwischen BPMN und ConDec.\newline
+Bei Untersuchung der \textit{Klarheit} lässt sich feststellen, dass sich die Anzahl der Sequenzflusselemente bzw. Existenz Constraints zwischen BPMN (26) und ConDec (7) unterscheidet. Ebenfalls gibt es eine Differenz bei der Anzahl der Gateways (6)/Constraints (13) und der Anzahl von unterschiedlichen Gateways (2)/Constraints (4) zwischen BPMN und ConDec.\newline
 
 Wie in Kapitel 4 bereits erwähnt [A 4.1], kann sich eine größere Anzahl an Gateways/Constraints negativ auf die Verständlichkeit auswirken. Hier ist die Anzahl bei ConDec mehr als doppelt so hoch wie bei BPMN. Zudem existiert im ConDec Modell keine eindeutige Start Aktivität [A 4.2], welche durch das Init-Constraint markiert ist. Dies liegt daran, dass mehrere Aktivitäten als Einstiegsaktivität in Frage kommen. Die möglichen Einstiegsaktivitäten sind jedoch nicht auf den ersten Blick ersichtlich. Dies steigert die Komplexität des ConDec Modelles. \newline
 Das BPMN-Modell weist nur im Hinblick auf die Anzahl von Sequenzflusselementen im Gegensatz zu Existenz Constraints einen höheren Wert auf. Wie in Kapitel 4 festgelegt, wird die Anzahl Sequenzfluss/Existenz Constraints [A 4.1] einfach gewichtet und die Anzahl Gateways/Constraints und Anzahl unterschiedlicher Gateways/Constraints beim ConDec Modell doppelt [A 4.1] gewichtet. Somit weist das mit ConDec erstellte Modell in zwei jeweils doppelt gewichteten Punkten eine höhere Komplexität auf und das BPMN Modell nur in einem einfach gewichteten Punkt. Da noch die fehlende Startmarkierung bei ConDec [A 4.2] hinzu kommt, wird das mit ConDec erstellte Modell auf Grund der definierten Anforderungen in Kapitel 4 als komplexer eingestuft.
@@ -489,7 +489,7 @@ In Abbildung \ref{fig:OpenUpPhasenDec} sind die vier Phasen des Open UP deklarat
 
 
 Abbildung \ref{fig:InceptionDecUnter} zeigt die deklarative Modellierung der Iteration \grqq Inception\grqq. Die Aktivität \grqq Projekt planen und managen\grqq \  kann parallel zu allen anderen Aktivitäten des Modells ausgeführt werden.\newline
-Nach Ausführung der Aktivität \grqq Iteration planen\grqq \ werden die Aktivitäten \grqq Anforderungen identifizieren und aufbereiten\grqq \ und \grqq auf technisches Vorgehen einigen\grqq \ parallel zueinander bearbeitet. Aus diesem Grund sind die Aktivitäten \grqq Anforderungen identifizieren und aufbereiten\grqq \ und \grqq auf technisches Vorgehen einigen\grqq \ mit der Aktivität \grqq Projekt planen und managen\grqq \ durch das Constraint \textit{succession} verbunden, da sie erst nach deren Ausführung durchgeführt werden dürfen und auch ausgeführt werden müssen. \newline
+Nach Ausführung der Aktivität \grqq Iteration planen\grqq \ werden die Aktivitäten \grqq Anforderungen identifizieren und verfeinern\grqq \ und \grqq auf technisches Vorgehen einigen\grqq \ parallel zueinander bearbeitet. Aus diesem Grund sind die Aktivitäten \grqq Anforderungen identifizieren und aufbereiten\grqq \ und \grqq auf technisches Vorgehen einigen\grqq \ mit der Aktivität \grqq Projekt planen und managen\grqq \ durch das Constraint \textit{succession} verbunden, da sie erst nach deren Ausführung durchgeführt werden dürfen und auch ausgeführt werden müssen. \newline
 
 \begin{figure}[htp]
 \begin{center}
@@ -519,7 +519,7 @@ Die deklarative Modellierung der Iteration \grqq Construction\grqq \  kann Abbil
 \end{figure}
 
 In \ref{fig:TransitionDecUnter} ist die deklarative Modellierung der Iteration \grqq Transition\grqq \  abgebildet.\newline
-Die Aktivitäten \grqq Release vorbereiten, Produkt Training vorbereiten, Lösungsinkrement entwickeln, Lösung testen, Iteration planen und managen, weitere Aufgaben erledigen\grqq \ werden parallel zueinander bearbeitet. \grqq Produkt Training durchfuehren\grqq \   sowie \grqq Release für die Produktion freigeben\grqq \  können anschließen parallel zueinander ausgeführt werden. Daher befindet sich zwischen diesen beiden Aktivitäten und allen anderen Aktivitäten das Constraint \textit{precedence}.
+Die Aktivitäten \grqq Release vorbereiten\grqq, \grqq Produkt Training vorbereiten\grqq, \grqq Lösungsinkrement entwickeln\grqq, \grqq Lösung testen\grqq, \grqq Iteration planen und managen\grqq, \grqq weitere Aufgaben erledigen\grqq \ werden parallel zueinander bearbeitet. \grqq Produktschulung durchfuehren\grqq \   sowie \grqq Release für die Produktion freigeben\grqq \  können anschließen parallel zueinander ausgeführt werden. Daher befindet sich zwischen diesen beiden Aktivitäten und allen anderen Aktivitäten das Constraint \textit{precedence}.
 
 \begin{figure}[htp]
 \begin{center}
