--- a/Masterarbeit 4/Tex/chapter8.tex
+++ b/Masterarbeit 4/Tex/chapter8.tex
@@ -1,18 +1,19 @@
 \chapter{Zusammenfassung und Ausblick}\label{sec:chapter8}
- In diesem Kapitel werden die Ergebnisse dieser Arbeit in Kapitel 8.1 zusammengefasst. Ein Fazit der Ergebnisse der vorliegenden Arbeit folgt in Kapitel 8.2. Weiterhin wird in Kapitel 8.3 ein Ausblick auf weitere zukünftig mögliche Forschungsthemen im Bereich der Anwendbarkeit von imperativen und deklarativen Prozessmodellierungssprachen gegeben.
+ In diesem Kapitel werden die Ergebnisse dieser Arbeit in Kapitel 8.1 zusammengefasst. Ein Fazit der Ergebnisse der vorliegenden Arbeit folgt ebenfalls in Kapitel 8.1. Weiterhin wird in Kapitel 8.2 ein Ausblick auf weitere zukünftig mögliche Forschungsthemen im Bereich der Anwendbarkeit von imperativen und deklarativen Prozessmodellierungssprachen gegeben.
 
 \section{Zusammenfassung und Fazit}
 
 Im Verlauf dieser Arbeit wurden zunächst grundlegende Begriffe im Bereich Prozessmodelle erläutert. Hierfür wurden Softwareentwicklungsprozesse vorgestellt und es wurden Software-Projekttypen sowie Leichtgewichtige und Schwergewichtige Prozessmodelle eingeführt.\newline
 
-Weiterhin wurden die Grundlagen der Modellierung dargelegt. Es erfolgte zunächst eine Einführung in die Prozessmodellierung und es wurden deren Ziele sowie die Grundsätze ordnungsgemäßer Modellierung erläutert.\newline
+Weiterhin wurden die Grundlagen der Modellierung dargelegt. Es erfolgte zunächst eine Einführung in die Prozessmodellierung und es wurden deren Ziele sowie die Grundsätze ordnungsgemäßer Modellierung beschrieben.\newline
 
-Prozessmodellierungssprachen wurden erläutert und es wurden die in dieser Arbeit verwendeten imperativen und deklarativen Prozessmodellierungssprachen eingeführt. Ebenso wurden Modellierungswerkzeuge allgemein erklärt und es wurden die in der vorliegenden Arbeit eingesetzten Modellierungstools vorgestellt.\newline
+Prozessmodellierungssprachen wurden analysiert und es wurden die in dieser Arbeit verwendeten imperativen und deklarativen Prozessmodellierungssprachen eingeführt. Ebenso wurden Modellierungswerkzeuge allgemein erklärt und es wurden die in der vorliegenden Arbeit eingesetzten Modellierungstools vorgestellt.\newline
 
-Zudem erfolgte die Anforderungserhebung für den vergleich von imperativen und deklarativen Prozessmodellierungsansätzen Vergleich festgelegt.\newline
+Zudem erfolgte die Anforderungserhebung für den Vergleich von imperativen und deklarativen Prozessmodellierungsansätzen.\newline
 
 Danach konnte die Modellierung der imperativen und deklarativen Modelle der drei Softwareentwicklungsprozesse Scrum, Open UP und V-Modell XT erfolgen. Nach einer kurzen Einführung und Analyse der Modelle wurde die imperative und deklarative Modellierung der selbigen dargelegt. Anschließend erfolgte jeweils der Vergleich der Modellierungen durch die definierten Kriterien. Abschließend wurde ein Vergleich zwischen allen modellierten Prozessmodellen anhand der Anforderungskriterien durchgeführt. \newline
-Die Ergebnisse zeigen, dass der imperative Prozessmodellierungsansatz BPMN bei vielen Punkten einen geeigneteren Ansatz darstellt als ConDec. Dies hat der direkte Vergleich der verschiedenen Modelle ergeben. Im Gegensatz zu BPMN gibt es bei ConDec momentan noch einige Grenzen in der Darstellbarkeit. Dies bezieht sich vor allem auf Rollen und Artefakte. Diese können zwar im Modellierungstool Declare angelegt und zugewiesen werden jedoch sind diese im Prozessmodell selbst nicht visualisierbar. Zwar entstehen bei der Modellierung mit BPMN oftmals Modelle mit deutlich mehr Elementen insgesamt als bei der Modellierung mit ConDec, jedoch sind im Gegensatz dazu die mit ConDec erstellten Modelle oftmals deutlich komplexer als die BPMN Modelle. Dies wirkt sich sowohl negativ auf das Verständnis der Leser des Modelles aus, als auch auf den Aufwand des Modellierers beim Erstellen der Modelle mit ConDec. Je mehr geistiger Aufwand beim Lesen und modellieren für Prozessmodelle notwendig ist desto mehr Fehler entstehen auch beim interpretieren und modellieren der Modelle. \newline
+
+Die Ergebnisse zeigen, dass der imperative Prozessmodellierungsansatz BPMN bei vielen Punkten einen geeigneteren Ansatz darstellt als ConDec. Dies hat der direkte Vergleich der verschiedenen Modelle ergeben. Im Gegensatz zu BPMN gibt es bei ConDec momentan noch einige Grenzen in der Darstellbarkeit. Dies bezieht sich vor allem auf Rollen und Artefakte. Diese können zwar im Modellierungstool Declare angelegt und zugewiesen werden, jedoch sind diese im Prozessmodell selbst nicht visualisierbar. Zwar entstehen bei der Modellierung mit BPMN oftmals Modelle mit deutlich mehr Elementen insgesamt als bei der Modellierung mit ConDec, jedoch sind im Gegensatz dazu die mit ConDec erstellten Modelle oftmals deutlich komplexer als die BPMN Modelle. Dies wirkt sich sowohl negativ auf das Verständnis der Leser des Modelles aus als auch auf den Aufwand des Modellierers beim Erstellen der Modelle mit ConDec. Je mehr geistiger Aufwand beim Lesen und modellieren für Prozessmodelle notwendig ist desto mehr Fehler entstehen auch beim Interpretieren und Modellieren der Modelle. \newline
 
 Die herausgearbeiteten Ergebnisse des Vergleiches wurden mit Hilfe einer Studie validiert. Zunächst wurden der Aufbau und der Ablauf der Studie genau erläutert. Weiterhin wurden die Ergebnisse der Studie präsentiert und ein Fazit gezogen. Hier wurden die Ergebnisse aus Kapitel 6 nochmals weitgehend bestätigt. Somit ist BPMN im Moment die geeignetere Modellierungssprache. Bei ConDec müsste noch nachgebessert werden um die Eignung zur Modellierung noch zu steigern.\newline
 
@@ -33,8 +34,8 @@ Genau wie geistige Werte für Constraints an sich nicht vorhanden sind, fehlen a
 \textbf{Erweiterung/Anpassung ConDec}
 
 Die Prozessmodellierungssprache ConDec hat großes Potenzial. Jedoch weist sie derzeit noch einige Mängel auf. Hier können die fehlenden Visualisierungsmöglichkeiten von Rollen und Artefakten im Prozessmodell selbst genannt werden. ConDec sollte noch um weitere Notationselemente erweitert werden, welche Rollen und Artefakte darstellen.\newline
-Da auch vielen unterschiedlichen Constraints bei ConDec ein Problem darstellen, könnte hier in weiterer Forschung versucht werden, die Constraints eventuell anzupassen/umzustellen, um ein kleineres Spektrum an Constraints zu erreichen.\newline
-Weiterhin sollte es auch möglich gemacht werden, mehrere Aktivitäten mit dem Init-Constraint auszustatten, um diese als mögliche Startaktivitäten zu markieren. Damit würde etwas Komplexität aus den Modellen heraus genommen. Der Leser des Modelles könnte sich dann auf einen Blick orientieren, bei welchen Aktivitäten gestartet werden kann.\newline
+Da auch die vielen unterschiedlichen Constraints bei ConDec ein Problem darstellen, könnte hier in weiterer Forschung versucht werden, die Constraints eventuell anzupassen/umzustellen, um ein kleineres Spektrum an Constraints zu erreichen.\newline
+Weiterhin sollte es auch möglich gemacht werden, mehrere Aktivitäten mit dem Init-Constraint auszustatten, um diese als mögliche Startaktivitäten zu markieren. Damit würde etwas Komplexität aus den Modellen heraus genommen werden. Der Leser des Modelles könnte sich dann auf einen Blick orientieren, bei welchen Aktivitäten gestartet werden kann.\newline
 
 \textbf{Weitere Studien mit breiterem Spektrum an Teilnehmern}
 
