--- a/Masterarbeit 4/Tex/chapter9.tex
+++ b/Masterarbeit 4/Tex/chapter9.tex
@@ -4,9 +4,9 @@ In diesem Kapitel werden verwandte Arbeiten vorgestellt. Es werden Arbeiten zu d
 
 \section{Modellierung von Softwareentwicklungsprozessen}
 
-Es gibt schon einige Arbeiten, welche sich mit der Modellierung von Software Engineering Prozessmodellen in BPMN beschäftigen.
+Es gibt schon einige Arbeiten in welchen es um die Modellierung von Software Engineering Prozessmodellen in BPMN geht.
 \cite{Menhorn2014} beschäftigt sich mit der Analyse und der Überführung von Softwareentwicklungsprozessen in die Prozessmodellierungssprache BPMN und der Erweiterung von BPMN bei eventuellen Grenzen der Darstellbarkeit.\newline
-Weiterhin gibt es drei Arbeiten, bzw. Blogeinträge, welche sich mit der Modellierung von Scrum \cite{software}, Open UP \cite{brunner2007fallstudie} und \cite{Bregenzer2014} V-Modell XT in BPMN beschäftigen. Hier werden jeweils Teile der drei Software-Engineering Prozessmodelle analysiert und anschließend in BPMN modelliert.\newline
+Weiterhin gibt es drei Arbeiten, bzw. Blogeinträge, bei welchen es um die Modellierung von Scrum \cite{software}, Open UP \cite{brunner2007fallstudie} und \cite{Bregenzer2014} V-Modell XT in BPMN geht. Hier werden jeweils Teile der drei Software-Engineering Prozessmodelle analysiert und anschließend in BPMN modelliert.\newline
 In \cite{sabrina734, sabrina758, sabrina795} wurden Softwareentwicklungsprozesse in einem System umgesetzt. Das Ziel war es, dass die Softwareentwicklungsprozesse dort komplett ausführbar sind. Die Softwareentwicklungsprozesse wurden imperativ umgesetzt. Eine deklarative Umsetzung erfolgte für dynamische Abläufe, welche im laufenden Tagesgeschehen ausserhalb der Modelle abgearbeitet werden.\newline
  Im Gegensatz zur vorliegenden Arbeit wird in den Arbeiten \cite{software}, \cite{brunner2007fallstudie}, \cite{Bregenzer2014} jeweils nur ein Softwareentwicklungsprozess modelliert und auch nur in der imperativen Prozessmodellierungssprache BPMN. In \cite{Menhorn2014} werden ebenfalls Teile von Scrum, Open UP und V-Modell XT modelliert, jedoch nur in der imperativen Prozessmodellierungssprache BPMN. Der Fokus der Arbeit \cite{Menhorn2014} liegt auf der Erweiterung von BPMN um zusätzliche Notationselemente.\newline
  In \cite{sabrina795, sabrina734, sabrina758} wurden ebenfalls Softwareentwicklungsprozesse imperativ und deklarativ umgesetzt. Jedoch erfolgte dort im Gegensatz zur vorliegenden Arbeit kein Vergleich zwischen imperativen und deklarativen Modellierungsansätzen, sondern es wurde je nachdem, ob es sich um einen statischen oder dynamischen Prozess handelt ein imperativer oder deklarativer Ansatz gewählt.\newline
@@ -17,12 +17,13 @@ In der vorliegenden Arbeit hingegen werden Teile von allen drei Softwareentwickl
 
 Verwandte Arbeiten zur Thematik Verständlichkeit von Prozessmodellierungssprachen werden im Folgenden vorgestellt.
 
-Es existieren bereits einige Arbeiten, welche die Verständlichkeit von Prozessmodellen untersuchen. \cite{bpm07} z.B. untersucht die Verständlichkeit von Ereignisgesteuerten Prozessketten (EPK), während in \cite{gruhn2006complexity} die Komplexität und Verständlichkeit von BPMN und UML-Diagrammen untersucht wird. \cite{reijers2011study} untersucht die Verständlichkeit von EPK und BPMN im Hinblick auf die Komplexität der XOR-, OR- und UND-Verzweigungen und \cite{gruhn2006adopting} untersucht die Verständlichkeit von BPMN durch Zuordnung von kognitiven Werten zu den einzelnen Notationselementen bei BPMN. \newline
-In \cite{sabrina942} wird die Verständlichkeit von deklarativen Prozessmodellen im Hinblick auf die Verwendung von hierarchischen Unterprozessen untersucht. Eine weitere Arbeit, welche sich mit der Verständlichkeit von deklarativen Prozessmodellen beschäfigt, ist \cite{haisjackl2014understanding}. Hier wird das Vorgehen von Systemanalysten beim Verstehen von deklarativen Modellen untersucht. In \cite{sabrina933} wird ebenfalls das Verständnis von deklarativen Prozessmodellen im Hinblick auf das Lesen von deklarativen Modellen, die Kombination von Constraints und Unterschiede zwischen flachen und hierarchischen Prozessmodellen.\newline
-\cite{pinggera2010investigating} hingegen untersucht wie der Prozess der Prozessmodellierung durch Systeme unterstützt werden kann. Im Gegensatz zu \cite{pinggera2010investigating} wird in der vorliegenden Arbeit untersucht, welcher Prozessmodellierungsansatz an sich besser zum Modellieren für den Modellierer geeignet ist und nicht wie der Modellierer durch Systeme beim Modellieren unterstützt werden kann.\newline
+Es existieren bereits einige Arbeiten, welche die Verständlichkeit von Prozessmodellen untersuchen. \cite{bpm07} z.B. beleuchtet die Verständlichkeit von Ereignisgesteuerten Prozessketten (EPK), während sich \cite{gruhn2006complexity} der Komplexität und Verständlichkeit von BPMN und UML-Diagrammen widmet. \cite{reijers2011study} untersucht die Verständlichkeit von EPK und BPMN im Hinblick auf die Komplexität der XOR-, OR- und UND-Verzweigungen und in\cite{gruhn2006adopting} wird die Verständlichkeit von BPMN durch Zuordnung von kognitiven Werten zu den einzelnen Notationselementen bei BPMN beurteilt. \newline
+
+In \cite{sabrina942} wird die Verständlichkeit von deklarativen Prozessmodellen im Hinblick auf die Verwendung von hierarchischen Unterprozessen untersucht. Eine weitere Arbeit, welche sich mit der Verständlichkeit von deklarativen Prozessmodellen beschäfigt, ist \cite{haisjackl2014understanding}. Hier wird das Vorgehen von Systemanalysten beim Verstehen von deklarativen Modellen untersucht. In \cite{sabrina933} wird ebenfalls das Verständnis von deklarativen Prozessmodellen im Hinblick auf das Lesen von deklarativen Modellen, die Kombination von Constraints und Unterschiede zwischen flachen und hierarchischen Prozessmodellen. Diese Arbeiten stützen sich bei Ihrer Untersuchung hauptsächlich auf empirische Daten, welche durch das Durchführen von Studien zustande gekommen sind. Die vorliegende Arbeit verwendet bei der Untersuchung der Verständlichkeit der deklarativen Prozessmodelle in erster Linie theoretische Erkenntnisse. Diese werden anchließend durch empirische Daten gestützt. \newline
+\cite{pinggera2010investigating} untersucht wie der Prozess der Prozessmodellierung durch Systeme unterstützt werden kann. Im Gegensatz zu \cite{pinggera2010investigating} wird in der vorliegenden Arbeit untersucht, welcher Prozessmodellierungsansatz an sich besser zum Modellieren für den Modellierer geeignet ist und nicht wie der Modellierer durch Systeme beim Modellieren unterstützt werden kann.\newline
 In der vorliegenden Arbeit werden einige Erkenntnisse der vorgestellten Arbeiten beim Modellieren und beim Vergleich der Prozessmodelle beachtet. Beispielsweise wurden Unterprozesse beim  Modellieren verwendet um komplexe Prozessmodelle übersichtlicher darzustellen. Diese wurden  aber beim Modellieren von sowohl BPMN als auch ConDec bei den gleichen Sachverhalten angewendet.\newline
 Außerdem wurden die Ergebnisse von \cite{gruhn2006adopting} zum schwierigeren Verständnis von Patterns in BPMN bei der Durchführung des Vergleichs herangezogen.\newline
-Im Gegensatz zu den hier vorgestellten Arbeiten liegt der Fokus des Vergleiches in dieser Arbeit nicht ausschließlich auf der Verständlichkeit der beiden Prozessmodellierungssprachen sondern vor allem auf deren Eignung zur Modellierung. Die Untersuchung der Verständlichkeit nimmt in der vorliegenden Arbeit nur einen kleinen Teil ein. Weitere Aspekte, die in dieser Arbeit betrachtet werden sind die generelle Anwendbarkeit der beiden Prozessmodellierungssprachen sowie deren Grenzen bei der Modellierung. \newline
+Im Gegensatz zu den hier vorgestellten Arbeiten liegt der Fokus des Vergleiches in dieser Arbeit nicht ausschließlich auf der Verständlichkeit der beiden Prozessmodellierungssprachen sondern vor allem auf deren Eignung zur Modellierung. Die Untersuchung der Verständlichkeit nimmt in der vorliegenden Arbeit nur einen kleinen Teil ein. Weitere Aspekte, die in dieser Arbeit betrachtet werden, sind die generelle Anwendbarkeit der beiden Prozessmodellierungssprachen sowie deren Grenzen bei der Modellierung. \newline
 
 
 \section{Vergleich von Prozessmodellierungssprachen}
@@ -30,7 +31,7 @@ Im Gegensatz zu den hier vorgestellten Arbeiten liegt der Fokus des Vergleiches 
 Dieser Abschnitt widmet sich Arbeiten, welche sich mit dem Vergleich von Prozessmodellierungssprachen beschäftigen.\newline
 Die Arbeit \cite{recker2007does} untersucht Unterschiede in der Verständlichkeit zwischen Ereignisgesteuerten Prozessketten (EPK) und BPMN.\newline
 Der Artikel \cite{fahland2010} beschäftigt sich mit dem Unterschied zwischen imperativen und deklarativen Prozessmodellierungssprachen und arbeitet deren Stärken und Schwächen heraus. Der Vergleich baut auf den Unterschieden von imperativen und deklarativen Programmiersprachen auf. \newline
-\cite{pichler2012} untersucht aufbauend auf den Erkenntnissen von  \cite{fahland2010} die Verständlichkeit von imperativen und deklarativen Prozessmodellierungssprachen anhand einer Studie. Als imperative Prozessmodellierungssprache dient in diesem Artikel ebenfalls BPMN und als deklarative Prozessmodellierungssprache ebenfalls ConDec. \newline 
+\cite{pichler2012} untersucht aufbauend auf den Erkenntnissen von  \cite{fahland2010} die Verständlichkeit von imperativen und deklarativen Prozessmodellierungssprachen anhand einer Studie. Als imperative Prozessmodellierungssprache dient in diesem Artikel ebenfalls BPMN und als deklarative Prozessmodellierungssprache ebenso ConDec. \newline 
 \cite{fahland2010} und \cite{pichler2012} untersuchen, bei welchen abzubildenden Informationen entweder imperative oder deklarative Prozessmodellierungssprachen vorzuziehen sind. In der vorliegenden Arbeit wird beim Vergleich der Anwendbarkeit der beiden Prozessmodellierungssprachen nicht unter bestimmten abzubildenden Informationen unterschieden. Der Vergleich wird im Gegensatz zu \cite{fahland2010} und \cite{pichler2012}  ganz allgemein für alle möglichen abzubildenden Informationen durchgeführt. \newline
 In der durchgeführten Studie in \cite{pichler2012} wurden die Teilnehmer vorher sowohl in der imperativen, als auch in der deklarativen Prozessmodellierung geschult. In der Studie der vorliegenden Arbeit wurde darauf geachtet, Probanden mit unterschiedlichem Hintergrundwissen zu imperativen und deklarativen Prozessmodellen zu befragen. Das Wissen der Teilnehmer der Studie reichte hier von sehr großem Wissen bis überhaupt kein Wissen.\newline
 
